@@ -200,6 +200,7 @@ teejay: Aaron Trevena <teejay@cpan.org>
 theorbtwo: James Mastros <james@mastros.biz>
 Thomas Kratz <tomk@cpan.org>
 timbunce: Tim Bunce <tim.bunce@pobox.com>
+tinita: Tina Mueller <cpan2@tinita.de>
 Todd Lipcon
 Tom Hukins <tom@eborcom.com>
 tommy: Tommy Butler <tbutler.cpan.org@internetalias.net>
